Set a graveyard for a zone
The graveyard will be where the user is teleported after death

--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -54,6 +54,10 @@
                 <td><%= @room.is_zone_exit %></td>
               </tr>
               <tr>
+                <th>Is a graveyard?</th>
+                <td><%= @room.is_graveyard %></td>
+              </tr>
+              <tr>
                 <th>Ecology</th>
                 <td><%= @room.ecology %></td>
               </tr>
