--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -41,6 +41,12 @@
         <%= error_tag f, :map_layer %>
       </div>
 
+      <div class="form-group">
+        <%= label f, :ecology %>
+        <%= select f, :ecology, Room.ecologies(), class: "form-control" %>
+        <%= error_tag f, :ecology %>
+      </div>
+
       <div class="checkbox">
         <%= label f, :is_zone_exit do %>
           <%= checkbox f, :is_zone_exit %> Is A Zone Exit?
@@ -48,10 +54,11 @@
         <%= error_tag f, :is_zone_exit %>
       </div>
 
-      <div class="form-group">
-        <%= label f, :ecology %>
-        <%= select f, :ecology, Room.ecologies(), class: "form-control" %>
-        <%= error_tag f, :ecology %>
+      <div class="checkbox">
+        <%= label f, :is_graveyard do %>
+          <%= checkbox f, :is_graveyard %> Is A Graveyard?
+        <% end %>
+        <%= error_tag f, :is_graveyard %>
       </div>
     </div>
 
