--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -44,6 +44,14 @@
                 <% end %>
               </td>
             </tr>
+            <tr>
+              <th>Starting Level</th>
+              <td><%= @zone.starting_level %></td>
+            </tr>
+            <tr>
+              <th>Ending Level</th>
+              <td><%= @zone.ending_level %></td>
+            </tr>
           </table>
         </div>
       </div>
