--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -68,14 +68,28 @@
         <%= label f, :user_text %>
         <%= text_input f, :user_text, class: "form-control" %>
         <%= error_tag f, :user_text %>
-        <span class="help-block">Available replacements: <code>user</code>, <code>name</code>, <code>target</code>
+        <span class="help-block">Available replacements: <code>user</code>, <code>name</code>, <code>target</code></span>
       </div>
 
       <div class="form-group">
         <%= label f, :usee_text %>
         <%= text_input f, :usee_text, class: "form-control" %>
         <%= error_tag f, :usee_text %>
-        <span class="help-block">Available replacements: <code>user</code>, <code>name</code>, <code>target</code>
+        <span class="help-block">Available replacements: <code>user</code>, <code>name</code>, <code>target</code></span>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :is_usable do %>
+          <%= checkbox f, :is_usable %> Is Usable?
+        <% end %>
+        <%= error_tag f, :is_usable %>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :amount %>
+        <%= text_input f, :amount, class: "form-control" %>
+        <%= error_tag f, :amount %>
+        <span class="help-block">Amount of use an item has if usable</span>
       </div>
     </div>
 
