--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -73,7 +73,7 @@
                 </li>
               <% end)%>
             </ul>
-            <div class="tab-content">
+            <div class="tab-content" style="overflow: scroll">
               <%= Enum.map(layers(@zone), fn (layer) -> %>
                 <div class="tab-pane <%= layer_class(@zone, layer) %>" id="layer-<%= layer %>">
                   <table class="table">
