Allow changing an NPCs status line

--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -24,6 +24,13 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :status_line %>
+        <%= text_input f, :status_line, class: "form-control" %>
+        <%= error_tag f, :status_line %>
+        <span class="help-block">Make sure to include <code>{name}</code></span>
+      </div>
+
+      <div class="form-group">
         <%= label f, :experience_points %>
         <%= number_input f, :experience_points, class: "form-control" %>
         <%= error_tag f, :experience_points %>
