--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -34,7 +34,7 @@
         <%= label f, :description %>
         <%= textarea f, :description, class: "form-control", rows: 3 %>
         <%= error_tag f, :description %>
-        <span class="help-block">Valid template replacements: <code>status_line</code></span>
+        <span class="help-block">Valid template replacements: <code>status_line</code>, <code>name</code></span>
       </div>
 
       <div class="form-group">
