--- a/lib/web/templates/admin/bug/show.html.eex
+++ b/lib/web/templates/admin/bug/show.html.eex
@@ -28,6 +28,10 @@
               <td><%= @bug.title %></td>
             </tr>
             <tr>
+              <th>Is Completed?</th>
+              <td><%= @bug.is_completed %></td>
+            </tr>
+            <tr>
               <th>Body</th>
               <td><%= @bug.body %></td>
             </tr>
