--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -94,6 +94,12 @@
                 <span>Item Aspects</span>
               <% end %>
             </li>
+            <li class="<%= tab_selected(@conn, "notes") %>">
+              <%= link(to: note_path(@conn, :index)) do %>
+                <i class="fa fa-book"></i>
+                <span>Notes</span>
+              <% end %>
+            </li>
             <li class="<%= tab_selected(@conn, "npcs") %>">
               <%= link(to: npc_path(@conn, :index)) do %>
                 <i class="fa fa-address-card"></i>
