Start adding conversations to NPCs
Record the conversation in the database, don't act on it yet

--- a/lib/web/templates/admin/npc/show.html.eex
+++ b/lib/web/templates/admin/npc/show.html.eex
@@ -70,6 +70,10 @@
               <th>Events</th>
               <td><pre><%= @npc.events |> Poison.encode!(pretty: true) %></pre></td>
             </tr>
+            <tr>
+              <th>Conversations</th>
+              <td><pre><%= @npc.conversations |> Poison.encode!(pretty: true) %></pre></td>
+            </tr>
           </table>
         </div>
       </div>
