--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -67,6 +67,13 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :conversations %>
+        <%= textarea f, :conversations, value: @changeset |> conversations(), class: "form-control", rows: 15 %>
+        <%= error_tag f, :conversations %>
+        <span class="help-block">Enter in valid JSON</span>
+      </div>
+
+      <div class="form-group">
         <%= label f, :notes %>
         <%= textarea f, :notes, class: "form-control", rows: 10 %>
         <%= error_tag f, :notes %>
