--- a/lib/web/templates/admin/quest/edit.html.eex
+++ b/lib/web/templates/admin/quest/edit.html.eex
@@ -1,6 +1,6 @@
 <section class="content-header">
   <h1>
-    <%= @race.name %>
+    <%= @quest.name %>
   </h1>
 
   <ol class="breadcrumb">
@@ -9,8 +9,8 @@
         <i class="fa fa-dashboard"></i> Home
       <% end %>
     </li>
-    <li><%= link("Races", to: race_path(@conn, :index)) %></li>
-    <li><%= link(@race.name, to: race_path(@conn, :show, @race.id)) %></li>
+    <li><%= link("Quests", to: quest_path(@conn, :index)) %></li>
+    <li><%= link(@quest.name, to: quest_path(@conn, :show, @quest.id)) %></li>
     <li class="active">Edit</li>
   </ol>
 </section>
@@ -18,7 +18,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <%= render "_form.html", path: race_path(@conn, :update, @race.id), changeset: @changeset, title: "Edit", submit: "Update" %>
+      <%= render "_form.html", path: quest_path(@conn, :update, @quest.id), changeset: @changeset, title: "Edit", submit: "Update" %>
     </div>
   </div>
 </section>
