--- a/lib/web/templates/admin/quest/index.html.eex
+++ b/lib/web/templates/admin/quest/index.html.eex
@@ -63,7 +63,13 @@
                 </div>
               </div>
             </div>
+
+            <div class="form-group">
+              <%= label :quest, :giver_id, "Giver NPC" %>
+              <%= select :quest, :giver_id, NPC.for_select(), value: @filter["giver_id"], class: "form-control" %>
+            </div>
           </div>
+
           <div class="box-footer">
             <%= submit "Filter", class: "btn btn-primary" %>
             <%= link "Clear", to: quest_path(@conn, :index), class: "btn" %>
