--- a/lib/web/templates/admin/quest/_form.html.eex
+++ b/lib/web/templates/admin/quest/_form.html.eex
@@ -24,6 +24,13 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :completed_message %>
+        <%= textarea f, :completed_message, class: "form-control", rows: 5 %>
+        <%= error_tag f, :completed_message %>
+        <span class="help-text">A message the NPC will say after the quest is completed</span>
+      </div>
+
+      <div class="form-group">
         <%= label f, :experience %>
         <%= number_input f, :experience, class: "form-control" %>
         <%= error_tag f, :experience %>
