Mark NPCs as quest givers, add conversations to Quests
Mark them as quest givers, to eventually be able to selectively display
a `(!)` next to their name if they have a quest. We want to only perform
this check if we know they are a quest giver. Add conversations to
quests so that, if they are a quest giver, we can find the next
available quest and use that conversation as a replacement.

--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -52,6 +52,13 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :is_quest_giver do %>
+          <%= checkbox f, :is_quest_giver %> Is a quest giver?
+        <% end %>
+        <%= error_tag f, :is_quest_giver %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :stats %>
         <%= textarea f, :stats, value: @changeset |> stats(), class: "form-control", rows: 12 %>
         <%= error_tag f, :stats %>
