--- a/lib/web/templates/admin/quest/_form.html.eex
+++ b/lib/web/templates/admin/quest/_form.html.eex
@@ -44,6 +44,12 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :currency, currency() |> String.capitalize() %>
+        <%= number_input f, :currency, class: "form-control" %>
+        <%= error_tag f, :currency %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :giver_id %>
         <%= select f, :giver_id, NPC.for_quest_select(), prompt: "Select NPC", class: "form-control" %>
         <%= error_tag f, :giver_id %>
