--- a/lib/web/templates/admin/user/show.html.eex
+++ b/lib/web/templates/admin/user/show.html.eex
@@ -139,6 +139,34 @@
     <div class="col-md-12">
       <div class="box">
         <div class="box-header">
+          <h3 class="box-title">Quests</h3>
+        </div>
+        <div class="box-body">
+          <table class="table">
+            <thead>
+              <th>Quest</th>
+              <th>Status</th>
+              <th>Progress</th>
+            </thead>
+            <tbody>
+              <%= Enum.map(@user.quest_progress, fn (progress) -> %>
+                <tr>
+                  <td><%= link(progress.quest.name, to: quest_path(@conn, :show, progress.quest_id)) %></td>
+                  <td><%= progress.status %></td>
+                  <td><%= progress.progress |> Poison.encode!(pretty: true) %></td>
+                </tr>
+              <% end) %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
           <h3 class="box-title">Sessions</h3>
         </div>
         <div class="box-body">
