--- a/lib/web/templates/admin/quest/show.html.eex
+++ b/lib/web/templates/admin/quest/show.html.eex
@@ -43,8 +43,8 @@
               <td><%= @quest.completed_message %></td>
             </tr>
             <tr>
-              <th>Conversations</th>
-              <td><pre><%= @quest.conversations |> Poison.encode!(pretty: true) %></pre></td>
+              <th>Script</th>
+              <td><pre><%= @quest.script |> Poison.encode!(pretty: true) %></pre></td>
             </tr>
             <tr>
               <th>Experience</th>
