Display notes as markdown

--- a/lib/web/templates/admin/npc/show.html.eex
+++ b/lib/web/templates/admin/npc/show.html.eex
@@ -56,7 +56,11 @@
             </tr>
             <tr>
               <th>Notes</th>
-              <td><%= @npc.notes %></td>
+              <td>
+                <%= if @npc.notes != nil do %>
+                  <%= Earmark.as_html!(@npc.notes) |> raw() %>
+                <% end %>
+              </td>
             </tr>
             <tr>
               <th>Status Line</th>
