--- a/lib/web/templates/admin/quest/_form.html.eex
+++ b/lib/web/templates/admin/quest/_form.html.eex
@@ -9,6 +9,7 @@
         <%= label f, :level %>
         <%= number_input f, :level, class: "form-control" %>
         <%= error_tag f, :level %>
+        <span class="help-block">Required level to receive the quest</span>
       </div>
 
       <div class="form-group">
@@ -21,13 +22,14 @@
         <%= label f, :description %>
         <%= textarea f, :description, class: "form-control", rows: 5 %>
         <%= error_tag f, :description %>
+        <span class="help-block">This will be available using <code>quest info :id</code> in game</span>
       </div>
 
       <div class="form-group">
         <%= label f, :completed_message %>
         <%= textarea f, :completed_message, class: "form-control", rows: 5 %>
         <%= error_tag f, :completed_message %>
-        <span class="help-text">A message the NPC will say after the quest is completed</span>
+        <span class="help-block">A message the NPC will say after the quest is completed</span>
       </div>
 
       <div class="form-group">
@@ -47,12 +49,14 @@
         <%= label f, :currency, currency() |> String.capitalize() %>
         <%= number_input f, :currency, class: "form-control" %>
         <%= error_tag f, :currency %>
+        <span class="help-block">The amount of <%= currency() %> the player will receive on completion</span>
       </div>
 
       <div class="form-group">
         <%= label f, :giver_id %>
         <%= select f, :giver_id, NPC.for_quest_select(), prompt: "Select NPC", class: "form-control" %>
         <%= error_tag f, :giver_id %>
+        <span class="help-block">The NPC that hands out the quest, all spanwers will pass out the quest</span>
       </div>
     </div>
 
