--- a/lib/web/templates/help/command.html.eex
+++ b/lib/web/templates/help/command.html.eex
@@ -15,7 +15,11 @@
         <% end) %>
       </p>
     <% end %>
-    <p><pre><%= @command.help(:full) |> Color.strip_color() |> String.replace("\n", "<br />") |> raw() %></pre></p>
+    <p>
+      <pre class="terminal">
+        <%= @command.help(:full) |> Color.format() |> String.replace("\n", "<br />") |> raw() %>
+      </pre>
+    </p>
   </div>
 </div>
 
