--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -58,7 +58,7 @@
                 <span>Bugs</span>
               <% end %>
             </li>
-            <li class="<%= tab_selected(@conn, ["classes", "skills"]) %>">
+            <li class="<%= tab_selected(@conn, "classes") %>">
               <%= link(to: class_path(@conn, :index)) do %>
                 <i class="fa fa-user-circle"></i>
                 <span>Classes</span>
@@ -84,13 +84,13 @@
             </li>
             <li class="<%= tab_selected(@conn, "items") %>">
               <%= link(to: item_path(@conn, :index)) do %>
-                <i class="fa fa-archive"></i>
+                <i class="fa fa-shopping-basket"></i>
                 <span>Items</span>
               <% end %>
             </li>
             <li class="<%= tab_selected(@conn, "item_aspects") %>">
               <%= link(to: item_aspect_path(@conn, :index)) do %>
-                <i class="fa fa-archive"></i>
+                <i class="fa fa-tag"></i>
                 <span>Item Aspects</span>
               <% end %>
             </li>
@@ -116,6 +116,12 @@
               <%= link(to: race_path(@conn, :index)) do %>
                 <i class="fa fa-eye"></i>
                 <span>Races</span>
+              <% end %>
+            </li>
+            <li class="<%= tab_selected(@conn, "skills") %>">
+              <%= link(to: skill_path(@conn, :index)) do %>
+                <i class="fa fa-gavel"></i>
+                <span>Skills</span>
               <% end %>
             </li>
             <li class="<%= tab_selected(@conn, "typos") %>">
